[tool.poetry]
name = "visualstringmatching"
version = "0.1.0"
description = ""
authors = ["Ellandq <waselland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.4"
scikit-image = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
